Bug 505185 - Most commands in the "View" menu should be disabled unless the thumbnail view is being shown
Summary: Most commands in the "View" menu should be disabled unless the thumbnail view...
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.13.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-03 22:14 UTC by Johannes Zarl-Zierl
Modified: 2025-10-05 20:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Zarl-Zierl 2025-06-03 22:14:33 UTC
SUMMARY
When in the overview page and the category browser pages, it is possible to select the "View", "Run slide show", "Jump to Selection" and other actions even though no thumbnails are shown. Effectively, this means that one is acting blind.

STEPS TO REPRODUCE
1. Start kphotoalbum
2. Select "View | View"

OBSERVED RESULT
The "first" image in the collection is shown.

EXPECTED RESULT
The "View" action should be disabled.
Comment 1 Johannes Zarl-Zierl 2025-07-06 17:20:00 UTC
Git commit b1a43a30b89da88ac5cd5ecfc39e11a0f4fcedbf by Johannes Zarl-Zierl.
Committed on 06/07/2025 at 17:19.
Pushed by johanneszarl into branch 'master'.

Disable "View" actions unless in thumbnail view

The view actions (view images, view images in new window, run slideshow,
run randomized slideshow) were always enabled.
It's not appropriate for these actions to be enabled in the overview
page or at the category browser page and could lead to non-intuitive
behaviour.

M  +1    -1    Browser/BrowserWidget.cpp
M  +1    -1    Browser/BrowserWidget.h
M  +1    -0    CHANGELOG.md
M  +17   -12   MainWindow/Window.cpp
M  +0    -1    MainWindow/Window.h

https://invent.kde.org/graphics/kphotoalbum/-/commit/b1a43a30b89da88ac5cd5ecfc39e11a0f4fcedbf