Disable "View" actions unless in thumbnail view

The view actions (view images, view images in new window, run slideshow,
run randomized slideshow) were always enabled.
It's not appropriate for these actions to be enabled in the overview
page or at the category browser page and could lead to non-intuitive
behaviour.

BUG: 505185